--- a/assets/css/proj-style.css
+++ b/assets/css/proj-style.css
@@ -118,6 +118,7 @@ svg,img { max-width: 100%; height: auto;}
 .ds-banner section{
     padding-left: 70px;
     padding-right: 100px;
+    padding-bottom: 45px;
 }
 
 .ds-banner section h1{
@@ -127,210 +128,28 @@ svg,img { max-width: 100%; height: auto;}
     color: #000;
 }
 
+/* Projetos */
 
-/* Sobre Mim */
-.ds-sobre-mim{
-    padding-top: 60px;
-    padding-bottom: 20px;
+.ds-projetos-secao{ 
+    padding-bottom: 30px;
 }
 
-.ds-titulo{
-    display: inline-block;
-    font-weight: 700;
-    color: #000;
-    text-transform: uppercase; letter-spacing: 1px;
-    font-size: 16px;
-    border-bottom: 3px solid #C2959C;
-    padding-bottom: 7px;
-    margin-bottom: 23px;
-}
-
-.ds-sobre-mim p{
-    color: #373737;
-    font-size: 18px;
-    line-height: 40px;
-    font-weight: 300;
-    margin-bottom: 60px;
-    text-align: justify;
-}
-
-/* Formação Acadêmica */
-.ds-formacao{
-    padding-bottom: 50px;
-}
-
-.ds-formacao-lista section{
-    padding-right: 70px;
-    padding-bottom: 20px;
-}
-
-.ds-formacao-lista{
-    padding-top: 15px;
-}
-
-.ds-universidade{
-    font-size: 24px;
-    font-weight: 300;
-    margin-bottom:10px;
-}
-
-.ds-formacao-lista span{
-    display: block;
-}
-
-span.ds-ano{
-    color: #373737;
-    font-size: 14px;
-    font-weight: 700;
-    padding-bottom: 10px;
-}
-
-span.ds-curso{
-    color: #373737;
-    font-weight: 500;
-    font-size: 18px;
-    padding-bottom: 10px;
-}
-
-/* Experiência */
-.ds-experiencia{
-    padding-bottom: 20px;
-}
-
-.ds-experiencia-lista section{
-    padding-right: 70px;
-}
-
-.ds-experiencia-lista{
-    padding-top: 15px;
-}
-
-.ds-escritorio{
-    font-size: 24px;
-    font-weight: 300;
-    margin-bottom:10px;
-}
-
-.ds-experiencia-lista span{
-    display: block;
-}
-
-span.ds-cargo{
-    color: #373737;
-    font-weight: 500;
-    font-size: 18px;
-    padding-bottom: 10px;
-}
-
-.ds-experiencia-lista p{
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 300;
-    text-align: justify;
-    margin-bottom: 40px;
-}
-
-/* Atividades */
-
-.ds-atividades{
-    padding-bottom: 20px;
-}
-
-.ds-atividades-lista section{
-    padding-right: 70px;
-}
-
-.ds-atividades-lista{
-    padding-top: 15px;
-}
-
-.ds-atividades-lista span{
-    display: block;
-}
-
-.ds-cursoat{
-    color: #373737;
-    font-weight: 500;
-    font-size: 20px;
-    padding-bottom: 5px;
-}
-
-span.ds-escola{
-    font-size: 15px;
-    font-weight: 300;
-    padding-bottom: 40px;
-}
-
-
-/* Skill */
-.ds-skills{
-    padding-bottom: 105px;
-}
-
-.ds-skills-lista{
-    list-style: none; 
-    padding: 0; 
-    margin: 0;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    margin-top: 11px;
-}
-.ds-skills-lista li{
-    display: inline-block;
-    color: #373737; 
-    font-size: 16px;
-    padding:10px 20px; 
-    background-color: #FFF; 
-    border: 1px solid #D7D7D7;
-    border-radius: 27px; 
-    margin-right: 15px;
-    margin-bottom: 15px;
-    font-weight: 500;
-}
-
-/* Footer */
-.ds-footer{ 
-    background-color: #C2959C;
-    padding: 50px 0;
-}
-
-.ds-footer section span{ 
-    color: rgba(255,255,255,0.5);
-    text-transform: uppercase;
-    font-weight: 700; 
-    font-size: 16px; 
-    letter-spacing: 1px; 
-    display: block; 
-    padding-bottom: 20px; 
-}
-
-.ds-footer section p{ 
-    letter-spacing: 1.13px; 
-    color: #FFF; 
-    font-size: 18px; 
-    margin-bottom: 40px; 
-}
-
-/* Portfólio*/
-.ds-portfolio{ 
-    padding-bottom: 80px;
-}
-.ds-portfolio-lista{ 
-    padding-left:70px; 
+.ds-projetos-lista{ 
+    padding-left: 70px; 
     padding-top:40px; 
     padding-right: 70px; 
-    background-color:#f5f5f5; 
+    padding-bottom: 40px;
+    background-color:#FFF9F9; 
     margin-bottom: 40px; 
 }
 
-.ds-portfolio-lista section{ 
+.ds-projetos-lista section{ 
     padding-top: 20px; 
     padding-right: 120px; 
     padding-bottom: 45px; 
 }
 
-.ds-portfolio-lista{ 
+.ds-projeto-titulo{ 
     color: #000; 
     font-size: 30px; 
     line-height: 36px; 
@@ -338,13 +157,46 @@ span.ds-escola{
     margin-bottom: 30px; 
 }
 
-.ds-portfolio-lista h3{ 
-    font-weight: 500; 
-    font-size: 35px; 
+.ds-projetos-lista p{ 
+    font-weight: 300; 
+    font-size: 18px; 
     line-height: 30px; 
 }
 
-.ds-portfolio-lista .ds-button{ 
+.ds-projetos-det-hed{ 
+    padding-top: 42px; 
+    padding-bottom: 80px; 
+}
+
+.ds-projetos-det-titulo{
+    font-weight: 600; 
+    color:#000; 
+    font-size: 48px; 
+    margin-bottom: 20px; 
+    margin-top: 80px;
+}
+
+.ds-projetos-det-dep{ 
+    display:block;
+    font-weight: 600; 
+    color: #000; 
+    font-size: 18px; 
+}
+
+.ds-projetos-figure-cont{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 40px;
+}
+
+.ds-projetos-img{
+    max-width: 75%;
+    padding-bottom: 40px;
+}
+
+
+.ds-projetos-lista .ds-button{ 
     margin-top: 20px; 
 }
 
@@ -371,23 +223,42 @@ span.ds-escola{
     vertical-align: middle;
 }
 
+.ds-button-voltar{
+    display: block;
+}
+
+/* Footer */
+.ds-footer{ 
+    background-color: #C2959C;
+    padding: 50px 0;
+}
+
+.ds-footer section span{ 
+    color: rgba(255,255,255,0.5);
+    text-transform: uppercase;
+    font-weight: 700; 
+    font-size: 16px; 
+    letter-spacing: 1px; 
+    display: block; 
+    padding-bottom: 20px; 
+}
+
+.ds-footer section p{ 
+    letter-spacing: 1.13px; 
+    color: #FFF; 
+    font-size: 18px; 
+    margin-bottom: 40px; 
+}
+
 /* Responsividade */
 @media (max-width: 768px) {
 	.ds-header,.ds-header.ds-fixed-header{
         padding: 15px 0;
     }
 
-	.ds-banner,.ds-sobre-mim,.ds-skills,.ds-experiencia,.ds-formacao,.ds-atividades{ 
+	.ds-banner,.ds-projetos-secao{ 
         padding-left: 10px;
         padding-right: 10px; 
-    }
-
-	.ds-logo{ 
-        font-size: 0; 
-    }
-
-	.ds-banner figure{ 
-        padding: 30px 0; 
     }
 
 	.ds-banner section{ 
@@ -420,31 +291,11 @@ span.ds-escola{
         font-size: 14px;
     }
 
-	.ds-sobre-mim{ 
-        padding-bottom: 60px; 
-    }
-
-	.ds-sobre-mim p{ 
-        font-size: 15px; 
-        line-height: 30px;
-        margin-bottom: 30px; 
-    }
-
-	.ds-skills-lista li{ 
-        margin-right: 10px; 
-        margin-bottom: 10px; 
-        font-size: 14px; 
-    }
-
-	.ds-skills .col-12,.ds-experiencia-lista .col-12{ 
-        margin-bottom: 40px; 
-    }
-
-	.ds-skills, .ds-experiencia{
+	.ds-projetos-secao{
         padding-bottom: 0; 
     }
 
-	.ds-experiencia-lista section, .ds-atividades-lista section{ 
+	.ds-projetos-secao section{ 
         padding-right: 0; 
     }
 
