Alteração tamanho de imagens

--- a/assets/css/proj-style.css
+++ b/assets/css/proj-style.css
@@ -191,8 +191,7 @@ svg,img { max-width: 100%; height: auto;}
 }
 
 .ds-projetos-img{
-    max-width: 75%;
-    padding-bottom: 40px;
+    max-width: 450px;
 }
 
 
@@ -297,6 +296,10 @@ svg,img { max-width: 100%; height: auto;}
 
 	.ds-projetos-secao section{ 
         padding-right: 0; 
+    }
+
+    .ds-projetos-img{
+        width: 90%;
     }
 
 	.ds-footer{ 
